Update 1.0.0: Using Latest openJDK(14)